2017-09-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/make_html.pl: Fix

2017-09-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.5

2017-09-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* amplot/amplot.awk: Major fix

2017-09-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* man/xml-source/amvault.8.xml: Improve page

2017-09-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: Parse server-src on SUCCESS dumper line
	* server-src/ambackupd.pl: Do not print the server-src on
	  SUCCESS dumper line

2017-09-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Quit the taperscan only if it is defined

2017-09-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Fix for tty output, improve usage output
	* server-src/amvault.pl: Fix for message 2500008, quiet, and always
	  quit the taperscan
	* man/xml-source/amvault.8.xml: Improve man page

2017-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c (untaint_fgets): New function
	* common-src/file.h (untaint_fgets): Add prototype
	* server-src/logfile.c, server-src/server_util.c: Use untaint_fgets

2017-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c: Fix deadlock
	* server-src/xfer-source-holding.c: Fix deadlock

2017-09-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c (conftoken_getc): Untaint the returned value
	* server-src/xfer-dest-holding.c: Check result of shm_ring_sem_wait

2017-09-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (ambind): Close fds before forking ambind
	* client-src/client_util.c, client-src/selfcheck.c,
	  client-src/senddiscover.c, common-src/ammessage.c,
	  common-src/amxml.c, common-src/security-util.c,
	  server-src/amcheck.c, server-src/driver.c,
	  server-src/server_util.c,